# CGRA352

./: .gitignore
Assignment1/: challenge.py  completion.py  core.py  main.py
Assignment2/: ImageInpainting.py  ImageQuilting.py  ImageReshuffling.py  Patchmatch.py  patchmatch-algo.txt  temp.py
Assignment3/: Assignment3.cpp  CMakeLists.txt  a3  readme.md
Assignment3/a3.dSYM/Contents/Resources/DWARF/: a3
Assignment4/: CMakeLists.txt  CroppingWindow.cpp  FeatureExtractionAndMatching.cpp  VideoStabilizer.cpp  main.cpp  main.hpp  toMp4.py
